// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navigation-Section Tests: When we open app 1`] = `
.c0 {
  display: block;
}

.c1 {
  position: relative;
  display: block;
  padding: 16px;
  border-bottom: 1px solid #f0f0f0;
  background: #fff;
  color: #000;
  font-size: 16px;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c2 {
  padding: 16px;
  display: none;
}

.c3 {
  padding: 8px 16px;
}

.c4 {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #666;
}

<div
  className="c0"
>
  <div
    className="c1"
    onClick={[Function]}
  >
    Structure
  </div>
  <div
    className="c2"
  >
    <div
      className="c3"
    >
      <a
        className="c4"
        data-vrt-locator="link"
        href="#Structure-Component"
      >
        Component
      </a>
    </div>
  </div>
</div>
`;

exports[`Navigation-Section Tests: When we toggle isOpened for section 1`] = `
.c0 {
  display: block;
}

.c1 {
  position: relative;
  display: block;
  padding: 16px;
  border-bottom: 1px solid #f0f0f0;
  background: #fff;
  color: #000;
  font-size: 16px;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c2 {
  padding: 16px;
  display: none;
}

.c3 {
  padding: 8px 16px;
}

.c4 {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #666;
}

<div
  className="c0"
>
  <div
    className="c1"
    onClick={[Function]}
  >
    Components
  </div>
  <div
    className="c2"
  >
    <div
      className="c3"
    >
      <a
        className="c4"
        data-vrt-locator="link"
        href="#Components-ErrorBoundary"
      >
        ErrorBoundary
      </a>
    </div>
  </div>
</div>
`;

exports[`Navigation-Section Tests: When we toggle isOpened for section 2`] = `
.c0 {
  display: block;
}

.c1 {
  position: relative;
  display: block;
  padding: 16px;
  border-bottom: 1px solid #f0f0f0;
  background: #fff;
  color: #000;
  font-size: 16px;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c2 {
  padding: 16px;
  display: none;
}

.c3 {
  padding: 8px 16px;
}

.c4 {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #666;
}

<div
  className="c0"
>
  <div
    className="c1"
    onClick={[Function]}
  >
    Components
  </div>
  <div
    className="c2"
  >
    <div
      className="c3"
    >
      <a
        className="c4"
        data-vrt-locator="link"
        href="#Components-ErrorBoundary"
      >
        ErrorBoundary
      </a>
    </div>
  </div>
</div>
`;
